web-server/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dummy-web-server
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "dummy-ingress"
spec:
  rules:
  - http:
      paths:
      - path: /web
        backend:
          serviceName: web-server
          servicePort: 3000
  backend:
    serviceName: default-http-backend
    servicePort: 80
